fix trending alignment

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@
 }
 
 .item-child-right h2 {
-   margin: 12px 0;
+   margin: 19px 0;
    color: #333;
    font-size: 26px;
    width: 61%;
